# KIDS24-team15

./: .gitignore  Cargo.toml
.github/workflows/: CI.yml
configs/: example.toml  generic_simple.toml  lsf.toml
crankshaft/: Cargo.toml  README.md  demo.json  demo.wdl
crankshaft/examples/: docker.rs  full.rs  lsf.rs  multi.rs  tes.rs
crankshaft/src/: engine.rs  example_task.json  example_task.yaml  lib.rs  main.rs  main_wdl.rs
crankshaft/src/engine/service/: runner.rs
crankshaft/src/engine/service/catalog/: daemon.rs  name.rs
crankshaft/src/engine/service/runner/: backend.rs
crankshaft/src/engine/service/runner/backend/: config.rs  docker.rs  generic.rs  tes.rs
crankshaft/src/engine/service/runner/backend/docker/: tmp_mount.rs
crankshaft/src/engine/task/: builder.rs  execution.rs  input.rs  resources.rs
crankshaft/src/engine/task/output/: builder.rs
crankshaft/test/fixtures/config/: lsf.toml
examples/: docker.rs  lsf.rs
src/: engine.rs  example_task.json  lib.rs  main.rs  my.wdl  wdl_util.rs
src/engine/: config.rs  service.rs  task.rs
src/engine/service/: runner.rs
src/engine/service/catalog/: builder.rs
src/engine/service/runner/: backend.rs
src/engine/service/runner/backend/: backend_config.rs  config.rs  docker.rs  generic.rs  tes.rs
src/engine/task/: builder.rs  input.rs  output.rs  resources.rs
src/engine/task/execution/: builder.rs
src/engine/task/input/: builder.rs
src/engine/task/resources/: builder.rs
tes/: Cargo.toml
tes-client/: Cargo.toml
tes-client/src/: lib.rs  main.rs  task.rs
tes-dashboard/: README.md  index.html  package-lock.json  package.json  vite.config.ts
tes-dashboard/src/: App.vue  main.ts  router.ts  shims-vue.d.ts  vite-env.d.ts
tes-dashboard/src/app-config/: TES-Dashboard.ts
tes-dashboard/src/components/: AppBar.vue  Snackbar.vue
tes-dashboard/src/plugins/: index.ts  vuetify.ts
tes-dashboard/src/services/: api.service.ts  error.service.ts  task.service.ts
tes-dashboard/src/store/: app.ts
tes-dashboard/src/styles/: settings.scss
tes-dashboard/src/views/: TESDashboard.vue
tes/src/: lib.rs  responses.rs  task.rs
tes/src/task/: executor.rs  file.rs
test/fixtures/config/: generic.toml
wdl-runtime/: Cargo.toml
wdl-runtime/src/: expr.rs  lib.rs  runtime.rs  stdlib.rs  task.rs
wdl-runtime/src/expr/: v1.rs
