[package]
name = "crankshaft"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.82"
bollard = "0.17.1"
bytes = "1.7.1"
clap = { version = "4.5.16", features = ["derive"] }
config = "0.14.0"
dirs = "5.0.1"
futures = "0.3.30"
indexmap = "2.5.0"
nonempty = "0.10.0"
paste = "1.0.15"
rand = "0.8.5"
random_word = { version = "0.4.3", features = ["en"] }
regex = "1.10.6"
reqwest = "0.12.7"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
tempfile = "3.12.0"
tes = { path = "../tes", version = "0.1.0" }
tokio = { version = "1.40.0", features = ["full", "time"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
url = "2.5.2"

[lints.rust]
missing_docs = "warn"
nonstandard-style = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"

[lints.rustdoc]
broken_intra_doc_links = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
