[package]
name = "crankshaft"
version = "0.1.0"
edition = "2021"

[dependencies]
indicatif = { workspace = true }
tes = { path = "../tes", version = "0.1.0" }
async-trait = { workspace = true }
bollard = { workspace = true }
bytes = { workspace = true }
clap = { workspace = true }
config = { workspace = true }
dirs = { workspace = true }
futures = { workspace = true }
indexmap = { workspace = true }
nonempty = { workspace = true }
paste = { workspace = true }
rand.workspace = true
random_word = { workspace = true }
regex = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tempfile = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
wdl-grammar = { workspace = true }
wdl-ast = { workspace = true }
wdl-analysis = { workspace = true }
anyhow = { workspace = true }

[lints.rust]
missing_docs = "warn"
nonstandard-style = "warn"
rust-2018-idioms = "warn"
rust-2021-compatibility = "warn"
rust-2024-compatibility = "warn"

[lints.rustdoc]
broken_intra_doc_links = "warn"

[lints.clippy]
missing_docs_in_private_items = "warn"
