[package]
name = "tes"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
reqwest = "0.12.7"
reqwest-middleware = "0.3.3"
reqwest-retry = "0.6.1"
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
