[package]
name = "tes"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { workspace = true }
reqwest = { workspace = true }
reqwest-middleware = { workspace = true }
reqwest-retry = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
