[package]
name = "wdl-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
id-arena = "2.2.1"
indexmap = "2.5.0"
ordered-float = "4.2.2"
paste = "1.0.15"
petgraph = "0.6.5"
string-interner = "0.17.0"
wdl-analysis = { git = "https://github.com/peterhuene/wdl", branch = "hackathon" }
wdl-ast = { git = "https://github.com/peterhuene/wdl", branch = "hackathon" }

[dev-dependencies]
tempfile = "3.12.0"
tokio = "1.40.0"
