[package]
name = "wdl-runtime"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
id-arena = { workspace = true }
indexmap = { workspace = true }
ordered-float = { workspace = true }
petgraph = { workspace = true }
string-interner = { workspace = true }
wdl-analysis = { workspace = true }
wdl-ast = { workspace = true }

[dev-dependencies]
tempfile = "3.12.0"
tokio = "1.40.0"
